fix spacing and font size of about page

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -22,6 +22,7 @@
 
 .about-section-container {
   padding-left: 3rem;
+  padding-right: 3rem;
 }
 
 #about h1 {
@@ -30,8 +31,10 @@
 }
 
 #about h2 {
-  font-size: 1.8rem;
-  margin: 50px 0 30px;
+  margin-bottom: 10px;
+  font-weight: 400;
+  font-size: 35px;
+  margin-top: 50px;
 }
 
 #about p {
@@ -41,6 +44,16 @@
 
 #about a {
   color: #ededed;
+}
+
+.about-hr {
+  margin-bottom: 20px;
+  height: 1px;
+  border: 0.4px solid rgba(255, 255, 255, 0.5);
+}
+
+.about-paragraph {
+  line-height: 27px;
 }
 
 .wrapper {
